ingress/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-custom
  namespace: argocd
  annotations:
    nginx.org/hsts: "false"
    cert-manager.io/cluster-issuer: issuer
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.labs.mustafamirreh.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 443
  tls:
  - hosts:
    - argocd.labs.mustafamirreh.com
    secretName: wildcard-tls
